@@ -1,5 +1,5 @@
 <?php
-// $Id: views_plugin_pager.inc,v 1.1.2.3 2009-12-28 21:34:25 merlinofchaos Exp $
+// $Id: views_plugin_pager.inc,v 1.1.2.4 2010-01-19 21:50:01 merlinofchaos Exp $
 
 /**
  * The base plugin to handle pager.
@@ -185,5 +185,23 @@ class views_plugin_pager extends views_plugin {
   function has_more_records() {
     return $this->get_items_per_page()
       && $this->total_items > (intval($this->current_page) + 1) * $this->get_items_per_page();
+  }
+
+  function exposed_form_alter(&$form, &$form_state) { }
+
+  function exposed_form_validate(&$form, &$form_state) { }
+
+  function exposed_form_submit(&$form, &$form_state, &$exclude) { }
+
+  function uses_exposed() {
+    return FALSE;
+  }
+
+  function items_per_page_exposed() {
+    return FALSE;
+  }
+
+  function offset_exposed() {
+    return FALSE;
   }
 }
